# all-you-need-is-ml

./: .gitignore  README.md  pyproject.toml  setup.py
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
dataset/: iris.py
src/: __init__.py  base.py  config.yaml  const.py  factory.py  logger.py  metrics.py  models.py  models.py.3a773f4e80fbfaff68e1aa4ed03c4162.tmp  pipeline.py  preprocessing.py  preprocessor.py  scaler.py  search.py  train.py  trainer.py  type.py  types.py  utils.py
src/config/: base.py  catboost_config.py  decision_tree_config.py  extra_tree_config.py  knn_config.py  lasso_config.py  lightgbm_config.py  linear_regression_config.py  logistic_regression_config.py  random_forest_config.py  sgd_classifier_config.py  support_vector_machine_config.py  test.yaml  xgb.py  xgboost.py  xgboost_config.py
src/configs/: catboost_config.py  decision_tree_config.py  extra_tree_config.py  knn_config.py  lasso_config.py  linear_regression_config.py  logistic_regression_config.py  random_forest_config.py  sgd_classifier_config.py  support_vector_machine_config.py  xgboost_config.py
src/loggers/: __init__.py  basic_logger.py  logger.py  mlflow_logger.py  wandb_logger.py
src/models/: base.py  catboost.py  classification.py  decision_tree.py  extra_tree.py  factory.py  knn.py  lightgbm.py  model.py  models.py  random_forest.py  regression.py  sgd_classifier.py  svm.py  xgboost.py
src/tuning/: distribution.py  search.py
(+36 files in other folders)
