[tool.poetry]
name = "awesome ml"
version = "0.1.0"
description = "Awesome ML"
authors = ["Minseong Kim <qtddpms@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src"},
]

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.7.2"
tqdm = "^4.66.1"
numpy = "^1.26.2"
matplotlib = "^3.8.2"
xgboost = "2.0.1"
scikit-learn = "^1.3.2"
optuna = "^3.4.0"
joblib = "^1.3.2"
catboost = "^1.2.2"
shap = "^0.43.0"
docker = "^6.1.3"
mlflow = "^2.8.1"
numba = "^0.58.1"
pyaml = "^23.9.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
